[package]
name = "gbaemurs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "gbaemu-common","gbaemu-core", "gbaemu-cpu", "gbaemu-ppu", "gbaemu-renderer", "gbaemu-rom"]
resolver = "2"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = 0
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[dependencies]
gbaemu-core = { version = "*", path = "./gbaemu-core"}
gbaemu-renderer = { version = "*", path = "./gbaemu-renderer"}

[workspace.dependencies]
sdl2 = { version = "*", features = ["unsafe_textures"] }
