[package]
name = "gbaemurs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["gbaemu-common","gbaemu-core", "gbaemu-cpu", "gbaemu-ppu", "gbaemu-rom"]
resolver = "2"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = 0
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "unwind"

[dependencies]
gbaemu-core.workspace = true

[workspace.dependencies]
winit = { version = "0.30" }
pixels = { version = "0.15" }
gbaemu-core = { version = "*", path = "./gbaemu-core"}
gbaemu-common = { version = "*", path = "./gbaemu-common"}
gbaemu-cpu = { version = "*", path = "./gbaemu-cpu"}
gbaemu-ppu = { version = "*", path = "./gbaemu-ppu"}
gbaemu-rom = { version = "*", path = "./gbaemu-rom"}

